# kaggle_pipeline

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  justfile  kaggle_tips.md  mypy.ini  pyproject.toml  pytest.ini  renovate.json5  requirements-dev.txt  requirements.txt  ruff.toml  summary_semantic_segmentation.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: actionlint.yaml  check_renovate.yml  ci.yaml  security.yaml
competitions/template/: Dockerfile  README.md  compose.yaml  pyproject.toml
projects/template/: .clineignore  .clinerules  README.md  pyproject.toml
shared/dev/: pyproject.toml
shared/dev_tools/: pyproject.toml
template/: .dockerignore  .env.sample  pyproject.toml
tests/: test_sample.py
