[project]
name = "kaggle-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]

[tool.uv.workspace]
members = ["template"]

[tool.uv]
dev-dependencies = [
  "kaggle>=1.6.6",
  "mypy>=1.14.1",
  "notebook==7.3.2",
  "poethepoet>=0.32",
  "pre-commit>=4.1",
  "pytest>=8.3.4",
  "ruff>=0.9.2",
  "seaborn>=0.13.2",
]
