[project]
name = "template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "lightgbm>=4.3",
  "lightning>=2.5.0.post0",
  "loguru>=0.7.2",
  "numba>=0.59",
  "optuna>=3.5",
  "polars>=0.20.15",
  "pydantic==2.6.3",
  "pydantic-settings>=2.2.1",
  "rich>=10.12",
  "torch>=2.6",
  "torchvision>=0.21",
  "tqdm>=4.64.1",
  "typer>=0.9",
  "unsloth[cu121-torch260]>=2025.3.15",
  "wandb>=0.16.4",
]

[tool.uv]
package = false
dev-dependencies = ["dev"]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.source]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
unsloth = { git = "https://github.com/unslothai/unsloth.git" }


[tool.uv.sources]
dev = {path="../shared/dev", editable=true}
