[project]
name = "template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "bitsandbytes>=0.45.3",
  "lightgbm>=4.3",
  "lightning>=2.5.0.post0",
  "loguru>=0.7.2",
  "numba>=0.59",
  "omegaconf>=2.3",
  "optimum>=1.24",
  "optuna>=3.5",
  "polars>=0.20.15",
  "pydantic==2.10.6",
  "pydantic-settings>=2.2.1",
  "rich>=10.12",
  "sentence-transformers>=3.4.1",
  "torch>=2.6",
  "torchvision>=0.21",
  "tqdm>=4.64.1",
  "typer>=0.9",
  "unsloth==2025.3.18",
  "unsloth-zoo>=2025.3.16",
  "vllm==0.8.1",
  "wandb>=0.16.4",
]

[tool.uv]
package = false
dev-dependencies = [
  "kaggle>=1.6.6",
  "notebook==7.3.3",
  "seaborn>=0.13.2",
  "streamlit>=1.43.2",
  "kagglehub>=0.3.10",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
