[project]
name = "dev"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "kaggle>=1.6.6",
  "mypy>=1.14.1",
  "notebook==7.3.2",
  "pytest>=8.3.4",
  "ruff>=0.9.2",
  "seaborn>=0.13.2",
  "streamlit>=1.43.2",
]
