[project]
name = "dev-tools"
version = "0.1.0"
description = "manage common dev dependencies"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "kaggle>=1.6.6",
  "mypy>=1.14.1",
  "notebook==7.0.8",
  "poethepoet>=0.32",
  "pre-commit>=4.1",
  "pytest>=8.3.4",
  "ruff>=0.9.2",
  "seaborn>=0.13.2",
]

[tool.uv]
package = false
